// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Badge renders badge component correctly and has only required props 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="py-0.5 pl-1.5 pr-2 text-xs text-primary-600 dark:text-primary-500 bg-primary-50 dark:bg-primary-400 dark:bg-opacity-10 flex w-max rounded-full font-medium items-center gap-1"
      >
        <span>
          Badge
        </span>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="py-0.5 pl-1.5 pr-2 text-xs text-primary-600 dark:text-primary-500 bg-primary-50 dark:bg-primary-400 dark:bg-opacity-10 flex w-max rounded-full font-medium items-center gap-1"
    >
      <span>
        Badge
      </span>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Badge renders badge component correctly and has only required props 2`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="py-0.5 pl-1.5 pr-2 text-xs text-primary-600 dark:text-primary-500 bg-primary-50 dark:bg-primary-400 dark:bg-opacity-10 flex w-max rounded-full font-medium items-center gap-1"
      >
        <span>
          Badge
        </span>
      </div>
    </div>
    <div>
      <div
        class="py-0.5 pl-2 pr-2.5 text-sm text-success-500 bg-success-50 dark:bg-success-400 dark:bg-opacity-10 flex w-max rounded-full font-medium items-center gap-1"
      >
        <span>
          Badge
        </span>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="py-0.5 pl-2 pr-2.5 text-sm text-success-500 bg-success-50 dark:bg-success-400 dark:bg-opacity-10 flex w-max rounded-full font-medium items-center gap-1"
    >
      <span>
        Badge
      </span>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Badge renders badge component correctly and has only required props 3`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="py-0.5 pl-1.5 pr-2 text-xs text-primary-600 dark:text-primary-500 bg-primary-50 dark:bg-primary-400 dark:bg-opacity-10 flex w-max rounded-full font-medium items-center gap-1"
      >
        <span>
          Badge
        </span>
      </div>
    </div>
    <div>
      <div
        class="py-0.5 pl-2 pr-2.5 text-sm text-success-500 bg-success-50 dark:bg-success-400 dark:bg-opacity-10 flex w-max rounded-full font-medium items-center gap-1"
      >
        <span>
          Badge
        </span>
      </div>
    </div>
    <div>
      <div
        class="py-1 pl-2.5 pr-3 text-sm text-error-500 bg-error-50 dark:bg-error-400 dark:text-error-400 dark:bg-opacity-10 flex w-max rounded-full font-medium items-center gap-1"
      >
        <span>
          Badge
        </span>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="py-1 pl-2.5 pr-3 text-sm text-error-500 bg-error-50 dark:bg-error-400 dark:text-error-400 dark:bg-opacity-10 flex w-max rounded-full font-medium items-center gap-1"
    >
      <span>
        Badge
      </span>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Badge renders badge component correctly, has required props and tests optional props 1`] = `
<div>
  <div
    class="py-0.5 pl-1.5 pr-2 text-xs text-gray-700 bg-gray-100 dark:bg-gray-400 dark:bg-opacity-10 dark:text-gray-300 flex w-max rounded-full font-medium items-center gap-1"
  >
    <svg
      class="stroke-gray-700 dark:stroke-white"
      fill="none"
      height="10"
      viewBox="0 0 24 24"
      width="10"
    >
      <path
        d="M12 5V19M5 12H19"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
      />
    </svg>
    <span>
      Badge
    </span>
  </div>
</div>
`;
